# aexpy

./: .dockerignore  .gitignore  CITATIONS.bib  Dockerfile  Dockerfile.exps  README.md  all.sh  buildcox.py  data.py  default.sh  env.yaml  full.sh  ground.sh  large.sh  long.sh  prepare.sh  psakefile.ps1  pyproject.toml  redo.sh  requirements.txt  rerun.sh  serve.sh
core/: demo.py  requirements.txt  setup.cfg
core/aexpy/: __init__.py  __main__.py  producers.py  services.py  utils.py
core/aexpy/caching/: __init__.py
core/aexpy/diffing/: __init__.py  default.py
core/aexpy/diffing/differs/: checkers.py  default.py
core/aexpy/diffing/evaluators/: checkers.py  default.py  evals.py  typing.py
core/aexpy/environments/: __init__.py  conda.py
core/aexpy/extracting/: attributes.py  base.py  default.py  environment.py  kwargs.py  types.py
core/aexpy/extracting/enriching/: __init__.py  attributes.py  kwargs.py  types.py
core/aexpy/extracting/main/: __init__.py  __main__.py  base.py
core/aexpy/extracting/third/: mypyserver.py
core/aexpy/models/: __init__.py  description.py  difference.py  typing.py
core/aexpy/preprocessing/: __init__.py  basic.py  counter.py  download.py  pip.py  pypi.py  wheel.py
core/aexpy/reporting/: __init__.py  text.py
core/test/: __main__.py
src/: .gitignore  Dockerfile  MANIFEST.in  longrun.docker.sh  longrun.sh  requirements.txt  run.ps1  setup.cfg
src/aexpy/: __init__.py  __main__.py  cli.py  env.py  fsutils.py  oldmain.py  pipelines.py  producer.py  producers.py  services.py  utils.py
src/aexpy/analyses/: environment.py  serializer_match.py
src/aexpy/analyzing/: __init__.py  default.py
src/aexpy/apidetector/: __main__.py  abcs.py  compat.py  ignores.py  processor.py
src/aexpy/batch/: data.py  default.py  gen.py  generators.py  pair.py  pidiff.py  processor.py  pycompat.py  releases.py  single.py
src/aexpy/batching/: __init__.py  generators.py  indexers.py  loaders.py  processor.py  stages.py
src/aexpy/batching/stages/: __init__.py  loader.py
src/aexpy/caching/: __init__.py  filesystem.py
src/aexpy/cli/: analyze.py
src/aexpy/differing/: __init__.py  checkers.py  default.py  rules.py
src/aexpy/differing/rules/: __init__.py  aliases.py  attributes.py  classes.py  externals.py  functions.py  modules.py  parameters.py  types.py
src/aexpy/diffing/: __init__.py  default.py
src/aexpy/diffing/differs/: checkers.py  default.py
src/aexpy/diffing/evaluators/: checkers.py  default.py  (+2 more)
src/aexpy/diffs/: differ.py  environment.py  serializer.py
src/aexpy/downloads/: index.py  releases.py  wheels.py
src/aexpy/environments/: __init__.py  conda.py  mamba.py
src/aexpy/evaluating/: __init__.py  checkers.py  default.py  evals.py  typing.py
src/aexpy/extracting/: __init__.py  __main__.py  attributes.py  base.py  basic.py  default.py  environment.py  environments.py  kwargs.py  types.py  utils.py
src/aexpy/io/: __init__.py  gzip.py
src/aexpy/jobs/: diffs.py  downloads.py
src/aexpy/models/: __init__.py  description.py  difference.py  typing.py
src/aexpy/preprocessing/: __init__.py  basic.py  counter.py  default.py  download.py  pip.py  pypi.py  wheel.py
src/aexpy/reporting/: __init__.py  collectors.py  default.py  text.py
src/aexpy/services/: __init__.py  docker.py  workers.py
src/aexpy/tools/: __main__.py  cli.py  models.py  paths.py  workers.py
src/aexpy/workers/: paths.py
src/batch/: __init__.py  __main__.py  pair.py  pidiff.py  pycompat.py  releases.py  single.py
src/helper/: ana-count.py
src/jobs/: clear.sh  exps.py  install.sh  long.sh  rebuild.sh  watcher.py
src/jobs/docker/: long.sh  test.sh
src/main/: .dockerignore  .gitignore  Dockerfile  requirements.txt  setup.cfg  testindocker.sh
src/main/aexpy/: __init__.py  __main__.py  batch.py  env.py  fsutils.py  test.py
src/main/helper/: .gitignore  cg.py  kwargs.py  type.py
src/old/analyses/: __main__.py  environment.py
src/old/cli/: interactive.py  view.py
src/old/jobs/: loader.py
src/servers/: __init__.py  __main__.py  cli.py  entrypoint.py  frontend.py
src/servers/api/: __init__.py
src/third/: __init__.py
src/third/pidiff/: __init__.py  __main__.py  pipelines.py
src/third/pycompat/: __main__.py  pipelines.py  rules.py
src/web/: .env  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/web/src/: App.vue  main.ts
src/worker/: __init__.py  pre.py
(+300 files in other folders)
