[metadata]
name = aexpy
version = attr: aexpy.__version__
author = StardustDL
author_email = stardustdl@163.com
description = AexPy /eɪkspaɪ/ is Api EXplorer in PYthon for detecting API breaking changes in Python packages.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/StardustDL/aexpy
project_urls =
    Source Code = https://github.com/StardustDL/aexpy
    Changes = https://github.com/StardustDL/aexpy/releases
    Documentation = https://aexpy.netlify.app/
    References = https://aexpy.netlify.app/
    Bug Tracker = https://github.com/StardustDL/aexpy/issues
classifiers =
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Quality Assurance
    Topic :: Utilities
    Intended Audience :: Developers

[options]
packages = find:
python_requires = >=3.10
install_requires = 
    click==8.1.3
    mypy==0.982
    pydantic==2.5.3

[options.entry_points]
console_scripts =
    aexpy = aexpy.__main__:main