[metadata]
name = aexpy
version = attr: aexpy.__version__
description = Python
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.10
install_requires = 
    click>=8.0.3
    requests>=2.26.0

[options.entry_points]
console_scripts =
    aexpy = aexpy.__main__:main