[metadata]
name = aexpy
version = attr: aexpy.__version__
author = StardustDL
author_email = stardustdl@163.com
description = Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/StardustDL/aexpy
project_urls =
    Source Code = https://github.com/StardustDL/aexpy
    Changes = https://github.com/StardustDL/aexpy/releases
    Documentation = https://github.com/StardustDL/aexpy
    Bug Tracker = https://github.com/StardustDL/aexpy/issues
classifiers =
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.7
install_requires = 
    click>=8.0.3
    enlighten>=1.10.1

[options.entry_points]
console_scripts =
    aexpy = aexpy.__main__:main